--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "notes"]
 	path = notes
-	url = https://github.com/migueldbg/notes
+	url = https://github.com/migueldbg/DSNotes-Ar-recoil-energy/tree/master
