--- a/RED/red-daq-light-multi-decoders-MC-integration/src/Level1/cfg/MCconfig_ngunNR.cfg
+++ b/RED/red-daq-light-multi-decoders-MC-integration/src/Level1/cfg/MCconfig_ngunNR.cfg
@@ -3,8 +3,9 @@ RecoilEnergy_max 300.
 RecoilType       1
 SourceType		   0
 nsamples         50000
-nclusters        1
-s1_start         2900
+nclusters        2
+s1_start         5000
 eps1             0.1992
 tau1_s1          6.7
 tau2_s1          1600.
+tdrift_max_sa    30000
